--- a/src/client/assets/styles/login.css
+++ b/src/client/assets/styles/login.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #eee;
+	background-color: #333842;
 }
 #container{
 	width: 100%
@@ -7,15 +7,16 @@ body{
 .header{
 	width: 100%;
 	height: 50px;
-	background-color: #211B1B;
+	background-color: #2A4976;
 	display: inline-table;
 }
 h1{
-	color: #ccc;
+	color: #062450 ;
 	font-size: 35px;
+	font-family: 'Julius Sans One', sans-serif;
 }
 p{
-	color: #732B2B;
+	color: #72829B;
 	font-style: italic;
 	font-family: cursive;
 	float: right;
@@ -29,7 +30,11 @@ p{
 fieldset{
 	height: 180px;
 	border-radius: 5px;
-	background-color: white;
+	background-color: #C6DDFF;
+	color: black;
+	font-size: 20px;
+	line-height: 28px;
+	font-weight: bold;
 
 }
 input{
@@ -43,11 +48,12 @@ input{
 	height: 40px;
 	border-radius: 5px;
 	outline: none;
-	background-color: #1D2541;
+	background-color: #062450;
 	color: white;
 }
 .button--state-register{
 	float: right;
 	color: white;
 	background-color: #7A0000;
+	width: 90px;
 }
