--- a/src/client/assets/styles/login.css
+++ b/src/client/assets/styles/login.css
@@ -1,6 +1,15 @@
 body{
 	background-color: #333842;
 }
+
+html {
+	box-sizing: border-box;
+}
+
+*, *:after, *:before {
+	box-sizing: inherit;
+}
+
 #container{
 	width: 100%
 }
@@ -11,49 +20,59 @@ body{
 	display: inline-table;
 }
 h1{
-	color: #062450 ;
+	color: #FFF;
 	font-size: 35px;
+	text-align: center;
 	font-family: 'Julius Sans One', sans-serif;
 }
 p{
 	color: #72829B;
 	font-style: italic;
-	font-family: cursive;
-	float: right;
-	margin-right: 10px;
-	margin-top: -55px;
+	font-family: 'Julius Sans One', sans-serif;
+	float: left;
+	margin-left: 10px;
 }
 .loginForm {
   width:280px;
   margin:10% auto;
 }
-fieldset{
-	height: 180px;
-	border-radius: 5px;
-	background-color: #C6DDFF;
-	color: black;
-	font-size: 20px;
-	line-height: 28px;
-	font-weight: bold;
+.login_form {
+    height: 231px;
+    border-radius: 5px;
+    background-color: #C6DDFF;
+    color: black;
+    font-size: 20px;
+    font-family: Helvetica;
 
 }
 input{
 	width: 250px;
-	height: 30px;
-	border-radius: 5px;
-	margin-top: 10px;
+    height: 30px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-left: 12px;
+    font-size: 14px;
+    border: 1px solid gray;
+    font-family: 'Cabin', sans-serif;
+    outline: none;
 }
 .button{
 	width: 80px;
-	height: 40px;
-	border-radius: 5px;
-	outline: none;
-	background-color: #062450;
-	color: white;
+    height: 40px;
+    border-radius: 5px;
+    outline: none;
+    background-color: #062450;
+    color: white;
+    margin-left: 15px;
+    font-family: 'Cabin', sans-serif;
+    font-size: 15px;
 }
 .button--state-register{
-	float: right;
-	color: white;
-	background-color: #7A0000;
-	width: 90px;
+	margin-right: 15px;
+    float: right;
+    color: white;
+    background-color: #7A0000;
+    width: 90px;
+    font-family: 'Cabin', sans-serif;
+    font-size: 15px;
 }
