Fixed Cloudinary by changing the import syntax still need the backend api calls and middleware

--- a/src/client/assets/styles/register.css
+++ b/src/client/assets/styles/register.css
@@ -23,7 +23,7 @@ h1{
 }
 
 .register_form {
-    height: 365px;
+    height: 400px;
     background-color: #C6DDFF;
     color: black;
     font-size: 20px;
@@ -84,6 +84,7 @@ h1{
     position: relative;
     top: 560px;
     left: 710px;
+    margin-bottom: 60px;
 }
 
 .select--topic--container {
@@ -110,3 +111,17 @@ h1{
 .topic_checkbox {
 	width: 30px;
 }
+
+#avatar {
+    color: white;
+    background-color: #333842;
+    outline: none;
+    font-family: 'Cabin', sans-serif;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-left: 12px;
+    border-radius: 5px;
+    height: 30px;
+    width: 100px;
+}
+
